--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class='dark'>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
     <title>ElectroVite</title>
   </head>
-  <body>
+  <body class='overflow-hidden'>
     <div id="app"></div>
     <script type="module" src="/src/renderer/renderer.tsx"></script>
   </body>
