--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
-    <title>ElectroVite</title>
+    <title>Epocher</title>
   </head>
   <body class='overflow-hidden'>
     <div id="app"></div>
